Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34261

Evaluation nagging screen licensee name not shown correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.0
    • 5.2.0 Alpha, 5.2.0 Beta1
    • Core: Other
    • None
    • Linux 64bit
    • 6381c807e550fa6f1f7425dc800dbf8be121ab82

      uThe nagging screen dialog seems to show only fixed amount of characters for licensee name. This happens with evaluation QtCreator built against Qt5 (5.2.0-beta1). The amount of characters displayed is 7.

      See attached screenshots.

      In the first screen shot the libQt5Core.so is opened with hex editor and the
      qt_lcnsuser field contains "fuu" as licensee name. Zero padding after that.

      In the second screenshot the nagging screen dialog is shown with 7 characters, "foo□□□□"

      Same behavior is seen with licensee names in length over 7 characters, the
      name is truncated after 7 characters.

      Quickly checking the place where the licensee name is loaded is here:

      src/corelib/kernel/qtcore_eval.cpp

      QLibraryInfo::licensee()

        1. licensee_1.png
          licensee_1.png
          42 kB
        2. licensee_3.png
          licensee_3.png
          22 kB
        For Gerrit Dashboard: QTBUG-34261
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            iknd Iikka Eklund
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes