Force length fo licensee literals to be computed at runtime

Prevent compilers from computing strlen() at compile time by
passing a volatile pointer.

Task-number: QTBUG-34261
Change-Id: I5e5e80181024d57496907918d2a43d7c83841082
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 6381c807e550fa6f1f7425dc800dbf8be121ab82 https://github.com/qt/qtbase/commit/6381c807e550fa6f1f7425dc800dbf8be121ab82