src/corelib/global/qlibraryinfo.cpp
@@ -679,6 +679,7 @@ block|{
 specifier|const
 name|char
 modifier|*
+specifier|volatile
 name|str
 init|=
 name|QT_CONFIGURE_LICENSEE
@@ -707,6 +708,7 @@ block|{
 specifier|const
 name|char
 modifier|*
+specifier|volatile
 name|str
 init|=
 name|QT_CONFIGURE_LICENSED_PRODUCTS
